--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,13 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>DVDS Availability</title>
-  <style>
-    body { font: 16px system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 24px; color: #111; }
-    h1 { margin-bottom: 0.25em; }
-    label { display: block; margin-top: 1.5em; font-weight: 600; }
-    select { padding: 8px 12px; min-width: 240px; }
-    pre { background: #f5f5f7; padding: 16px; border-radius: 8px; overflow: auto; }
-    .muted { color: #667; }
-  </style>
+  <style>body{font:16px system-ui;margin:24px} select{padding:8px} .muted{color:#667}</style>
 </head>
 <body>
   <h1>DVDS Availability</h1>
   <div class="muted">If you see a list below, the API & configs are loading.</div>
-  <p><strong>Status:</strong> <span id="status">Loading…</span></p>
-  <label for="location">Location</label>
+  <p><b>Status:</b> <span id="status">Loading…</span></p>
+  <label>Location</label>
   <select id="location"></select>
   <pre id="out" class="muted"></pre>
   <script src="/app.js"></script>
