--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>DVDS Availability</title>
-  <style>body{font:16px system-ui;margin:24px} select{padding:8px} .muted{color:#667}</style>
+  <style>
+    body{font:16px system-ui;margin:24px}
+    select,input,button{padding:8px;font:inherit}
+    .muted{color:#667}
+  </style>
 </head>
 <body>
   <h1>DVDS Availability</h1>
-  <div class="muted">If you see a list below, the API & configs are loading.</div>
+  <div class="muted">If you see locations below, the API & configs are loading.</div>
   <p><b>Status:</b> <span id="status">Loading…</span></p>
   <label>Location</label>
   <select id="location"></select>
