--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DVDS Availability</title>
   <link rel="icon"
-        href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect width="64" height="64" fill="white"/><text x="50%" y="52%" font-size="42" text-anchor="middle" dominant-baseline="central">🚘</text></svg>'>
+        href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect width="64" height="64" rx="12" ry="12" fill="white"/><text x="50%" y="52%" font-size="40" text-anchor="middle" dominant-baseline="central">🚘</text></svg>' />
   <style>
-    body{font:16px system-ui;margin:24px}
-    select,input,button{padding:8px;font:inherit}
-    .muted{color:#667}
-    a.button{display:none;margin-top:12px}
+    body { font: 16px system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif; margin: 24px; line-height: 1.5; }
+    select, button { padding: 8px 12px; font: inherit; }
+    #open { display: none; margin-top: 12px; }
+    pre { background: #f5f5f5; padding: 12px; border-radius: 8px; overflow: auto; }
+    .muted { color: #667; }
   </style>
 </head>
 <body>
   <h1>DVDS Availability</h1>
-  <div class="muted">If you see locations below, the API & configs are loading.</div>
-  <p><b>Status:</b> <span id="status">Loading…</span></p>
+  <p class="muted">If the dropdown fills, the APIs and JSON configs are loading correctly.</p>
+  <p><strong>Status:</strong> <span id="status">Booting…</span></p>
   <label for="location">Location</label>
   <select id="location" disabled></select>
-  <a id="open" class="button" href="#" target="_blank" rel="noopener">Open calendar</a>
-  <pre id="out" class="muted"></pre>
-  <script src="/app.js"></script>
+  <p><a id="open" class="muted" href="#" rel="noopener" target="_blank"></a></p>
+  <pre id="out" class="muted">Select a location to view availability.</pre>
+  <script type="module" src="/app.js"></script>
 </body>
 </html>
